Fix broken CSS rule
The 'relative' macro needs two arguments.

--- a/css/layout.styl
+++ b/css/layout.styl
@@ -41,7 +41,7 @@ header {
       text-decoration: none
       &:first-child {
         width: 100px
-        relative: top 10px
+        relative: top 10px left 0
       }
       small {
         display: block
